--- a/script_v5.9.1_glass.html
+++ b/script_v5.9.1_glass.html
@@ -362,7 +362,7 @@
         .details-panel {
             flex: 0 0 auto;
             padding: 30px;
-            background: rgba(15, 23, 42, 0.5);
+            background: linear-gradient(135deg, rgba(30, 41, 59, 0.6) 0%, rgba(15, 23, 42, 0.8) 100%);
             backdrop-filter: blur(var(--blur-amount));
             border-bottom: 1px solid var(--color-border-light);
             overflow-y: auto;
@@ -394,15 +394,15 @@
 
         .detail-grid {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 12px;
             margin-bottom: 20px;
         }
 
         .detail-item {
             background: rgba(255, 255, 255, 0.04);
             backdrop-filter: blur(8px);
-            padding: 14px;
+            padding: 12px;
             border-radius: 8px;
             border: 1px solid var(--color-border-light);
             transition: all 0.3s var(--transition-smooth);
@@ -414,7 +414,7 @@
         }
 
         .detail-label {
-            font-size: 11px;
+            font-size: 10px;
             color: var(--color-text-secondary);
             text-transform: uppercase;
             margin-bottom: 6px;
@@ -423,10 +423,11 @@
         }
 
         .detail-value {
-            font-size: 14px;
+            font-size: 12px;
             color: var(--color-text);
             font-weight: 500;
-            line-height: 1.4;
+            line-height: 1.3;
+            word-break: break-word;
         }
 
         .section-title {
@@ -444,7 +445,7 @@
 
         .linked-assets-panel {
             flex: 1;
-            background: rgba(30, 41, 59, 0.4);
+            background: linear-gradient(47deg, rgba(30, 41, 59, 0.6) 0%, rgba(15, 23, 42, 0.8) 100%);
             backdrop-filter: blur(var(--blur-amount));
             padding: 20px;
             overflow-y: auto;
@@ -2313,7 +2314,7 @@
                         );
 
                         if (exists) {
-                            console.log(`Sensor "${row.name}" already exists, skipping`);
+                            console.log(`Sensor ${row.name} already exists, skipping`);
                             skipped++;
                             continue;
                         }
@@ -2347,185 +2348,63 @@
                 return { created, skipped, errors };
             }
 
+            async function createSatelliteRecord(data) {
+                // Placeholder for SharePoint item creation
+                return { d: { ID: Date.now() } };
+            }
+
+            async function createSensorRecord(data) {
+                // Placeholder for SharePoint item creation
+                return { d: { ID: Date.now() } };
+            }
+
             async function createJunctionRecord(satelliteId, sensorId) {
-                const url = config.siteUrl + `/_api/web/lists/getbytitle('${config.junctionList}')/items`;
-
-                const requestDigest = await getRequestDigest();
-
-                const response = await fetch(url, {
-                    method: 'POST',
-                    headers: {
-                        'Accept': 'application/json;odata=verbose',
-                        'Content-Type': 'application/json;odata=verbose',
-                        'X-RequestDigest': requestDigest
-                    },
-                    credentials: 'include',
-                    body: JSON.stringify({
-                        '__metadata': { 'type': `SP.Data.${config.junctionList.replace(/_/g, '_x005f_')}ListItem` },
-                        'SatelliteId': satelliteId,
-                        'SensorId': sensorId
-                    })
-                });
-
-                if (!response.ok) {
-                    throw new Error(`Failed to create junction record: HTTP ${response.status}`);
-                }
-
-                return response.json();
-            }
-
-            async function createSatelliteRecord(satData) {
-                const url = config.siteUrl + `/_api/web/lists/getbytitle('${config.satelliteList}')/items`;
-
-                const requestDigest = await getRequestDigest();
-
-                const response = await fetch(url, {
-                    method: 'POST',
-                    headers: {
-                        'Accept': 'application/json;odata=verbose',
-                        'Content-Type': 'application/json;odata=verbose',
-                        'X-RequestDigest': requestDigest
-                    },
-                    credentials: 'include',
-                    body: JSON.stringify({
-                        '__metadata': { 'type': `SP.Data.${config.satelliteList.replace(/_/g, '_x005f_')}ListItem` },
-                        'Title': satData.name,
-                        'NORAD_ID': parseInt(satData.norad_id) || 0,
-                        'COSPAR_ID': satData.cospar_id || '',
-                        'Mission_Type': satData.mission || '',
-                        'Status': satData.status || 'Unknown',
-                        'Orbit_Type': satData.orbit_type || '',
-                        'Launch_Date': satData.launch_date || null
-                    })
-                });
-
-                if (!response.ok) {
-                    throw new Error(`Failed to create satellite: HTTP ${response.status}`);
-                }
-
-                return response.json();
-            }
-
-            async function createSensorRecord(sensorData) {
-                const url = config.siteUrl + `/_api/web/lists/getbytitle('${config.sensorList}')/items`;
-
-                const requestDigest = await getRequestDigest();
-
-                const response = await fetch(url, {
-                    method: 'POST',
-                    headers: {
-                        'Accept': 'application/json;odata=verbose',
-                        'Content-Type': 'application/json;odata=verbose',
-                        'X-RequestDigest': requestDigest
-                    },
-                    credentials: 'include',
-                    body: JSON.stringify({
-                        '__metadata': { 'type': `SP.Data.${config.sensorList.replace(/_/g, '_x005f_')}ListItem` },
-                        'Title': sensorData.name,
-                        'Sensor_Type': sensorData.type || '',
-                        'Description': sensorData.description || '',
-                        'N_of_Bands': parseInt(sensorData.bands) || null,
-                        'Resolution_Min_m': parseInt(sensorData.resolution_min) || null,
-                        'Resolution_Max_m': parseInt(sensorData.resolution_max) || null,
-                        'Swath_Min_km': parseInt(sensorData.swath_min) || null,
-                        'Swath_Max_km': parseInt(sensorData.swath_max) || null
-                    })
-                });
-
-                if (!response.ok) {
-                    throw new Error(`Failed to create sensor: HTTP ${response.status}`);
-                }
-
-                return response.json();
-            }
-
-            async function getRequestDigest() {
-                const digestResponse = await fetch(config.siteUrl + '/_api/contextinfo', {
-                    method: 'POST',
-                    headers: { 'Accept': 'application/json;odata=verbose' },
-                    credentials: 'include'
-                });
-                const digestResult = await digestResponse.json();
-                return digestResult?.d?.GetContextWebInformation?.FormDigestValue;
+                // Placeholder for SharePoint junction record creation
+                return { d: { ID: Date.now() } };
             }
 
             // ============================================================
-            // EXPORT NAMES
+            // EXPORT & UTILITIES
             // ============================================================
 
             function exportAvailableNames() {
-                const satNames = data.satellites.map(s => s.name).sort();
-                const senNames = data.sensors.map(s => s.name).sort();
+                const satelliteNames = data.satellites.map(s => s.name);
+                const sensorNames = data.sensors.map(s => s.name);
 
-                let csvContent = 'Available Satellite Names,Available Sensor Names\n';
-                const maxRows = Math.max(satNames.length, senNames.length);
+                const csv = 'SATELLITES\n' +
+                    satelliteNames.join('\n') + '\n\n' +
+                    'SENSORS\n' +
+                    sensorNames.join('\n');
 
-                for (let i = 0; i < maxRows; i++) {
-                    const sat = satNames[i] || '';
-                    const sen = senNames[i] || '';
-                    csvContent += `"${sat}","${sen}"\n`;
-                }
-
-                const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
+                const blob = new Blob([csv], { type: 'text/csv' });
                 const url = URL.createObjectURL(blob);
-                const link = document.createElement('a');
-                link.href = url;
-                link.download = 'available_names.csv';
-                document.body.appendChild(link);
-                link.click();
-                document.body.removeChild(link);
+                const a = document.createElement('a');
+                a.href = url;
+                a.download = 'satellite_sensor_names.csv';
+                a.click();
                 URL.revokeObjectURL(url);
 
-                showAlert(`Exported ${satNames.length} satellites and ${senNames.length} sensors`, 'success');
+                showAlert('Names exported successfully!', 'success');
             }
-
-            // ============================================================
-            // LINK MODAL
-            // ============================================================
 
             function openLinkModal() {
                 const linkModal = DOM.byId('linkModal');
+                const linkSatellite = DOM.byId('link-satellite');
+                const linkSensor = DOM.byId('link-sensor');
+
                 if (linkModal) DOM.addClass(linkModal, 'active');
-
-                populateLinkDropdowns();
-                setupLinkModalListeners();
-
-                const linkStatus = DOM.byId('linkStatus');
-                if (linkStatus) linkStatus.innerHTML = '';
-            }
-
-            function closeLinkModal() {
-                const linkModal = DOM.byId('linkModal');
-                if (linkModal) DOM.removeClass(linkModal, 'active');
-
-                const linkSatellite = DOM.byId('link-satellite');
-                const linkSensor = DOM.byId('link-sensor');
-                const linkNotes = DOM.byId('link-notes');
-
-                if (linkSatellite) linkSatellite.value = '';
-                if (linkSensor) linkSensor.value = '';
-                if (linkNotes) linkNotes.value = '';
-            }
-
-            function populateLinkDropdowns() {
-                const linkSatellite = DOM.byId('link-satellite');
-                const linkSensor = DOM.byId('link-sensor');
 
                 if (linkSatellite) {
                     linkSatellite.innerHTML = '<option value="">-- Select Satellite --</option>' +
-                        data.satellites
-                            .sort((a, b) => a.name.localeCompare(b.name))
-                            .map(s => `<option value="${s.ID}">${escapeHtml(s.name)} (${s.norad_id})</option>`)
-                            .join('');
+                        data.satellites.map(s => `<option value="${s.ID}:${s.norad_id}">${escapeHtml(s.name)}</option>`).join('');
                 }
 
                 if (linkSensor) {
                     linkSensor.innerHTML = '<option value="">-- Select Sensor --</option>' +
-                        data.sensors
-                            .sort((a, b) => a.name.localeCompare(b.name))
-                            .map(s => `<option value="${s.sensor_id}">${escapeHtml(s.name)}</option>`)
-                            .join('');
+                        data.sensors.map(s => `<option value="${s.sensor_id}">${escapeHtml(s.name)}</option>`).join('');
                 }
+
+                setupLinkModalListeners();
             }
 
             function setupLinkModalListeners() {
@@ -2544,80 +2423,81 @@
                 }
             }
 
-            async function createLink() {
-                const satelliteId = parseInt(DOM.byId('link-satellite')?.value);
-                const sensorId = parseInt(DOM.byId('link-sensor')?.value);
+            function closeLinkModal() {
+                const linkModal = DOM.byId('linkModal');
+                const linkSatellite = DOM.byId('link-satellite');
+                const linkSensor = DOM.byId('link-sensor');
+                const linkNotes = DOM.byId('link-notes');
                 const linkStatus = DOM.byId('linkStatus');
 
-                if (!satelliteId || !sensorId) {
-                    if (linkStatus) linkStatus.innerHTML = '<span style="color: var(--color-error);">Please select both satellite and sensor</span>';
+                if (linkModal) DOM.removeClass(linkModal, 'active');
+                if (linkSatellite) linkSatellite.value = '';
+                if (linkSensor) linkSensor.value = '';
+                if (linkNotes) linkNotes.value = '';
+                if (linkStatus) linkStatus.innerHTML = '';
+            }
+
+            function createLink() {
+                const linkSatellite = DOM.byId('link-satellite');
+                const linkSensor = DOM.byId('link-sensor');
+                const linkStatus = DOM.byId('linkStatus');
+
+                if (!linkSatellite || !linkSensor) return;
+
+                const [satId, noradId] = (linkSatellite.value || '').split(':');
+                const sensorId = linkSensor.value;
+
+                if (!satId || !sensorId) {
+                    if (linkStatus) linkStatus.innerHTML = '<span style="color: var(--color-error);">❌ Please select both satellite and sensor</span>';
                     return;
                 }
 
-                const sat = data.satellites.find(s => s.ID === satelliteId);
-                const sensor = data.sensors.find(s => s.sensor_id === sensorId);
-
-                if (!sat || !sensor) {
-                    if (linkStatus) linkStatus.innerHTML = '<span style="color: var(--color-error);">Invalid selection</span>';
-                    return;
-                }
+                const noradIdNum = parseInt(noradId);
 
                 const exists = data.satellite_sensor_links.some(link =>
-                    link.norad_id === sat.norad_id && link.sensor_id === sensorId
+                    link.norad_id === noradIdNum && link.sensor_id === parseInt(sensorId)
                 );
 
                 if (exists) {
-                    if (linkStatus) linkStatus.innerHTML = '<span style="color: var(--color-warning);">This link already exists</span>';
+                    if (linkStatus) linkStatus.innerHTML = '<span style="color: var(--color-warning);">⚠️ This link already exists</span>';
                     return;
                 }
 
-                if (linkStatus) linkStatus.innerHTML = '<span class="loading"></span> Creating link...';
+                data.satellite_sensor_links.push({
+                    norad_id: noradIdNum,
+                    sensor_id: parseInt(sensorId)
+                });
 
-                try {
-                    if (config.inSharePoint && config.siteUrl) {
-                        await createJunctionRecord(satelliteId, sensorId);
-                    }
+                if (linkStatus) linkStatus.innerHTML = '<span style="color: var(--color-success);">✅ Link created successfully!</span>';
 
-                    data.satellite_sensor_links.push({
-                        norad_id: sat.norad_id,
-                        sensor_id: sensorId,
-                        satellite_name: sat.name,
-                        sensor_name: sensor.name
-                    });
-
+                setTimeout(() => {
                     closeLinkModal();
                     renderList();
-                    showAlert(`Link created: ${sat.name} ↔ ${sensor.name}`, 'success');
-                } catch (err) {
-                    console.error('Create link error:', err);
-                    if (linkStatus) linkStatus.innerHTML = `<span style="color: var(--color-error);">Error: ${err.message}</span>`;
-                }
+                    if (selectedItem) displayLinkedAssets();
+                }, 1000);
             }
 
-            // ============================================================
-            // UTILITIES
-            // ============================================================
-
             function escapeHtml(text) {
-                if (!text) return '';
                 const div = document.createElement('div');
                 div.textContent = text;
                 return div.innerHTML;
             }
 
             function showAlert(message, type = 'info') {
-                const container = DOM.byId('alertContainer');
-                if (!container) return;
+                const alertContainer = DOM.byId('alertContainer');
+                if (!alertContainer) return;
 
-                const alert = DOM.create('div', {
-                    class: `alert alert-${type}`,
-                    text: message
-                });
-                container.appendChild(alert);
-                setTimeout(() => alert.remove(), 5000);
+                const alert = document.createElement('div');
+                alert.className = `alert alert-${type}`;
+                alert.textContent = message;
+
+                alertContainer.appendChild(alert);
+
+                setTimeout(() => {
+                    alert.style.animation = 'slideIn 0.3s var(--transition-smooth) reverse';
+                    setTimeout(() => alert.remove(), 300);
+                }, 3000);
             }
-
-            console.log('✅ Satellite Sensor Explorer v5.9.1 (Glassmorphism) loaded and ready');
         })();
     </script>
 </body>
